# whisky-protocol-core

./: Anchor.toml  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: npm-publish-github-packages.yml  stale.yml  webpack.yml
programs/whisky-core/: Cargo.toml
programs/whisky-core/src/: constants.rs  errors.rs  instructions.rs  lib.rs  state.rs  utils.rs
programs/whisky-gaming/: Cargo.toml
programs/whisky-gaming/src/: lib.rs
tests/: sdk-tests.ts  simple-test.ts  test-runner.ts  whisky-core.ts  whisky-gaming.ts
whisky-core-sdk/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
whisky-core-sdk/__tests__/: complete.test.ts  sdk.test.ts  whisky-core.ts
whisky-core-sdk/docs/: README.md  installation.md  quickstart.md
whisky-core-sdk/docs/api/: README.md
whisky-core-sdk/src/: WhiskyProvider.ts  api-reference.ts  client-stub.ts  client.ts  constants.ts  decoders.ts  errors.ts  events.ts  idl.ts  index.ts  instructions.ts  pdas.ts  types.ts  utils.ts
whisky-core-sdk/src/__tests__/: basic.test.ts  client.test.ts  setup.ts
