[workspace]
resolver = "2"
members = [
    "programs/whisky-core"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[patch.crates-io]
anchor-lang = { git = "https://github.com/coral-xyz/anchor", branch = "v0.29.0" }
anchor-spl = { git = "https://github.com/coral-xyz/anchor", branch = "v0.29.0" } 