[package]
name = "whisky-core"
version = "0.1.0"
description = "Whisky Gaming Protocol - Decentralized Gaming on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "whisky_core"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1", features = ["metadata"] }
mpl-token-metadata = "5.1.0"
sha2 = "0.10.0"
bs58 = "0.4.0"